--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/practicalinfo.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/practicalinfo.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tide | Practical info</title>
     <link rel="icon" href="../images/icons/icon.png">
 
     <!-- CSS: -->
-    <link rel="stylesheet" href="../css/basisstijlblad.css">
+    <link rel="stylesheet" href="../css/basicstylesheet.css">
 
     <!-- External Fonts: -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600" rel="stylesheet">
@@ -30,29 +31,24 @@
             <!-- Tickets dropdown menu: -->
             <ul>
                 <li><a class="hoverable" href="./ticketinfo.html">Ticket information</a></li>
-                <li><a class="hoverable" href="./buytickets.html">Buy tickets</a></li>
+                <li><a class="hoverable" href="tickets/buytickets.html">Buy tickets</a></li>
             </ul>
         </li>
         <li><a class="active" href="./practicalinfo.html">Practical information</a></li>
-        <li><a class="hoverable" href="./fotos.html">Photos</a></li>
+        <li><a class="hoverable" href="./photos.html">Photos</a></li>
         <li class="navlogo"><a class="alogo" href="../index.html">
             <img src="../images/icons/logo_magenta_xs.png" alt="logo"></a></li>
     </ul>
 </nav>
 
 <!-- Background banner, title text and buttons: -->
-<header>
-    <section class="infobanner">
-        <h1 class="intro">Practical information</h1>
+<header class="infobanner">
+    <h1>Practical info</h1>
+    <p class="subintro">We'll make sure you arrive safely.</p>
 
-        <!-- Buttons -->
-        <a href="./buytickets.html">
-            <button class="button button1">Buy your tickets!</button>
-        </a>
-        <a href="lineupinfo.html">
-            <button class="button button2">View our line-up!</button>
-        </a>
-    </section>
+    <!-- Buttons -->
+    <a class="button button1" href="tickets/buytickets.html">Buy your tickets!</a>
+    <a class="button button2" href="./lineupinfo.html">View our line-up!</a>
 </header>
 
 <!-- Content: -->
