--- a/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/coldplay.html
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/subpages/lineup/coldplay.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tide | Lineup</title>
     <link rel="icon" href="../../images/icons/icon.png">
 
     <!-- CSS: -->
-    <link rel="stylesheet" href="../../css/basisstijlblad.css">
-    <link rel="stylesheet" href="../../css/lineupstijlblad.css">
+    <link rel="stylesheet" href="../../css/basicstylesheet.css">
+    <link rel="stylesheet" href="../../css/lineupstylesheet.css">
 
     <!-- External Fonts: -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600">
@@ -31,11 +32,11 @@
             <!-- Tickets dropdown menu: -->
             <ul>
                 <li><a class="hoverable" href="../ticketinfo.html">Ticket information</a></li>
-                <li><a class="hoverable" href="../buytickets.html">Buy tickets</a></li>
+                <li><a class="hoverable" href="../tickets/buytickets.html">Buy tickets</a></li>
             </ul>
         </li>
         <li><a class="hoverable" href="../practicalinfo.html">Practical information</a></li>
-        <li><a class="hoverable" href="../fotos.html">Photos</a></li>
+        <li><a class="hoverable" href="../photos.html">Photos</a></li>
         <li class="navlogo"><a class="alogo" href="../../index.html">
             <img src="../../images/icons/logo_magenta_xs.png" alt="logo"></a></li>
     </ul>
@@ -48,9 +49,7 @@
         best Tide experience!
     </p>
     <!-- Buttons -->
-    <a href="./buytickets.html">
-        <button class="button button1">Buy your tickets!</button>
-    </a>
+    <a class="button button1" href="../tickets/buytickets.html">Buy your tickets!</a>
 </header>
 
 <!-- Content: -->
